--- a/lib/assets/index.html
+++ b/lib/assets/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" sizes="32x32" href="/logo">
-    <title>SUHAIL MD 🇵🇰🌙</title>
+    <title>WALLYJAYTECH MD 🇵🇰🌙</title>
 
     <script>
         window.console = window.console || function(t) {};
@@ -367,10 +367,8 @@ a:hover{
     <ul>
         <li><a href="/qr">Qr</a></li>
         <li><a href="/var">VARIABLES</a></li>
-        <li><a href='https://github.com/SuhailTechInfo/Suhail-Md-Media' > PLUGINS </a></li>
-        <li><a href='https://github.com/SuhailTechInfo/Suhail-Md/wiki' > WIKI's </a></li>
-        <li><a href='https://youtube.com/SuhailTechInfo' > YOUTUBE </a></li>
-        <li><a href='https://t.me/suhail_md0' > TELEGRAM </a></li>
+        <li><a href='https://youtube.com/wallyjaytechy' > YOUTUBE </a></li>
+        <li><a href='https://t.me/anjafrieda' > TELEGRAM </a></li>
     </ul>
 
 
@@ -411,7 +409,7 @@ a:hover{
     </div>
 
 
-    <h1 style="color: #d4cfcf; "> SUHAIL MD ❤️</h1>
+    <h1 style="color: #d4cfcf; "> WALLYJAYTECH MD ❤️</h1>
 <br>
     <h1>
         A Simple <span style="border-bottom:4px dotted #3c3c3c; color: #d4cfcf;">Pakistani</span> Whatsapp Bot.
